[package]
name = "whim"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
description = "An experiment in capitalism."
homepage = "https://github.com/casey/whim"

[dependencies.uuid]
version  = "0.5.1"
features = ["serde", "use_std"]

[dependencies.chrono]
version  = "0.4.0"
features = ["serde"]

[dependencies.num]
version  = "0.1.40"
features = ["serde"]

[dependencies]
clap              = "2.26.2"
error-chain       = "0.11.0"
exit-code         = "1.0.0"
extprim           = "1.4.0"
futures           = "0.1.16"
lazy_static       = "0.2.8"
log               = "0.3.8"
pretty_env_logger = "0.1.1"
regex             = "0.2.2"
serde             = "1.0.15"
serde_derive      = "1.0.15"
serde_json        = "1.0.3"
tokio-core        = "0.1.9"
websocket         = "0.20.2"
